package TestScript;

import "ddf/ddf_math.proto";

message Transform
{
    required dmMath.Vector3 Position = 1;
    required dmMath.Quat Rotation = 2;
}

message SubMsg
{
    required uint32 UIntValue = 1;
}

message Msg
{
    required uint32 UIntValue = 1;
    required int32 IntValue = 2;
    required string StringValue = 3;
    required dmMath.Vector3 VecValue = 4;
    required SubMsg SubMsgValue = 5;
}

message LuaDDFBufferOverflow
{
    required uint32 UIntValue = 1;
    required string StringValue = 3;
}
